--- a/jobsheet3Tugas2.html
+++ b/jobsheet3Tugas2.html
@@ -6,7 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>INI GAMBAR KUCING LUCU</h1>
+    <h2 text align="center">INI GAMBAR KUCING LUCU</h2>
+
+
+<img src="kucing1.jpg"  width="20%" height="10%" align="left">  
+<img src="kucing2.jpeg" width="20%" height="10%" align="right">
+<p>
+<h3>Kucing ini dua saudara, mereka sangat lucu tingkahnya. setiap hari kegiatannya selalu bermain, <br>kemana mana berdua </br>   
+anak kucing tersebut terlihat sagat gemuk, karna makannya banyak <br>setiap hari selalu minum susu, sangat dimanjakan oleh punya  </br></h3>      
+ </p>
 
 
 
